--- a/src/app/modules/private/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/modules/private/admin-dashboard/admin-dashboard.component.scss
@@ -36,3 +36,13 @@
     width: 150px;
     margin-right: 5px;
 }
+
+.mat-elevation-z8 {
+    margin: 5px;
+}
+
+.title {
+    font-size: large;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
