--- a/src/app/modules/private/my-listings/my-listings.component.scss
+++ b/src/app/modules/private/my-listings/my-listings.component.scss
@@ -24,3 +24,28 @@
     flex-wrap: nowrap;             
     justify-content: space-between;
 }
+
+.button-blue {
+    border-radius: 25px;
+    height: 35px;
+    background-color: blue;
+    color: white;
+    margin-right: 5px;
+}
+
+.button-orange {
+    border-radius: 25px;
+    height: 35px;
+    background-color: orange;
+    color: white;
+    margin-right: 5px;
+}
+
+.button-red {
+    border-radius: 25px;
+    height: 35px;
+    background-color: red;
+    color: white;
+    margin-right: 5px;
+}
+
