--- a/src/app/modules/private/user-board/user-board.component.scss
+++ b/src/app/modules/private/user-board/user-board.component.scss
@@ -49,6 +49,13 @@
     width: 150px;
 }
 
+.hv100 {
+   height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center; 
+}
+
 
 
 .preview {
