--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -7,21 +7,27 @@
   <!--USER LIST-->
   <div class="left-container width-15" *ngIf="user.Type === 1">
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="mat-button width-100">Messages</button>
+      <button mat-raised-button color="primary" class="button-main-menu width-100">Messages</button>
     </div>
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="mat-button width-100" [routerLink]="['/my-listings']">My
+      <button mat-raised-button color="primary" class="button-main-menu width-100" [routerLink]="['/my-listings']">My
         Listings</button>
     </div>
   </div>
   <!--ADMIN LIST-->
   <div class="left-container width-15" *ngIf="user.Type === 3">
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="mat-button width-100"
+      <button mat-raised-button color="primary" class="button-main-menu width-100"
         [routerLink]="['/admin-dashboard']">Dashboard</button>
     </div>
   </div>
-  <div class="column width-70">
+  <div class="column width-70" *ngIf="loading">
+    <div class="row row-margin background-filter hv100">
+      <mat-spinner></mat-spinner>
+    </div>
+
+  </div>
+  <div class="column width-70" *ngIf="!loading">
     <!--USER INFO-->
     <div class="row row-margin background-filter">
       <div class="column padding width-80">
