--- a/src/app/shared/component/filter/filter-search/filter-search.component.html
+++ b/src/app/shared/component/filter/filter-search/filter-search.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="border-margins width-25">
     <div class="submit-button">
-      <button mat-raised-button class="search" (click)="search()">
+      <button mat-raised-button class="search" (click)="searchFunction()">
         <div class="material-icons">
           search
         </div>
