--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -48,7 +48,7 @@
     </div>
   </nav>
   <ng-container *ngTemplateOutlet="template"></ng-container>
-  <app-footer></app-footer>
+  <app-footer class="footer"></app-footer>
 </div>
 <!--MOBILE-->
 <div *ngIf="isMobile">
