--- a/src/app/modules/home/search-board/search-board.component.html
+++ b/src/app/modules/home/search-board/search-board.component.html
@@ -1,13 +1,19 @@
 <app-filter-container></app-filter-container>
 <div class="row height">
     <div class="width-50_2">
-        <div class="column">
-            <div class="row" *ngFor="let promotedProperties of chunkArray">
+        <div>
+            <mat-grid-list cols="2" rowHeight="2:1">
+                <mat-grid-tile *ngFor="let property of promotedProperties">
+                    <app-property-frame class="padding-grid" [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+                    </app-property-frame>
+                </mat-grid-tile>
+            </mat-grid-list>
+            <!-- <div class="row" *ngFor="let promotedProperties of chunkArray">
                 <div *ngFor="let property of promotedProperties" class="frame">
                     <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
                     </app-property-frame>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="width-50_2">
