--- a/src/app/shared/component/property-frame/property-frame.component.scss
+++ b/src/app/shared/component/property-frame/property-frame.component.scss
@@ -2,6 +2,7 @@
 
     width: 100%;
     height: 200px;
+    border-radius: 15px;
 }
 
 .card-container {
@@ -21,6 +22,10 @@
 
 .card-image {
     height: 70%;
+    img {
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
 }
 
 .charachteristics{
