--- a/src/app/modules/add-listing/publish-success/publish-success.component.scss
+++ b/src/app/modules/add-listing/publish-success/publish-success.component.scss
@@ -10,7 +10,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 80vh;
 }
 
 .container-center-column {
