--- a/src/app/modules/login/login/login.component.html
+++ b/src/app/modules/login/login/login.component.html
@@ -28,6 +28,8 @@
       </div>
       <button mat-raised-button type="submit" [loading]="loadingButton" class="login-btn"> Login </button>
       <button mat-raised-button class="forgot-btn"> Forgot you password? </button>
+      <div class="middle">Or</div>
+      <button mat-raised-button (click)="goToResigter()" class="register-btn"> Register </button>
     </div>
   </div>
 </form>
