--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -18,7 +18,11 @@
   <div class="left-container width-15" *ngIf="user.Type === 3">
     <div class="button-wrapper">
       <button mat-raised-button color="primary" class="button-main-menu width-100"
-        [routerLink]="['/admin-dashboard']">Dashboard</button>
+        [routerLink]="['/admin-dashboard']">Dashboard Properties</button>
+    </div>
+    <div class="button-wrapper">
+      <button mat-raised-button color="primary" class="button-main-menu width-100"
+        [routerLink]="['/admin-dashboard']">Dashboard Users</button>
     </div>
   </div>
   <div class="column width-70" *ngIf="loading">
