--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -11,7 +11,7 @@
       <div class="row container-row">
         <div *ngFor="let property of promotedProperties">
           <div class="mr-5">
-            <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+            <app-property-frame [property]="property"  [routerLink]="['/details' , property.MySqlId]">
             </app-property-frame>
           </div>
         </div>
@@ -31,7 +31,7 @@
       <div class="row container-row">
         <div *ngFor="let property of newListings">
           <div class="mr-5">
-            <app-property-frame [property]="property" [routerLink]="['/property-detail', property.MySqlId]">
+            <app-property-frame [property]="property"  [routerLink]="['/details' , property.MySqlId]">
             </app-property-frame>
           </div>
         </div>
@@ -102,3 +102,4 @@
   </div>
 
 </div>
+<router-outlet></router-outlet>
