--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -11,13 +11,12 @@
       <div class="row container-row">
         <div *ngFor="let property of promotedProperties">
           <div class="mr-5">
-            <app-property-frame [property]="property"  [routerLink]="['/details' , property.MySqlId]">
+            <app-property-frame [property]="property"  [routerLink]="['details' , property.MySqlId]">
             </app-property-frame>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 
   <!--New Listings-->
