--- a/src/app/shared/property-details/property-details.component.html
+++ b/src/app/shared/property-details/property-details.component.html
@@ -55,7 +55,7 @@
             <div class="row property-content">
                 <div class="col-12">
                     <div class="tab location">
-                        <app-map width="10px"   [mapPointInput]="mapPoint"></app-map>
+                        <app-map class="map-location" width="10px"   [mapPointInput]="mapPoint"></app-map>
                     </div>
                     <div class="tab"> 
                         <h4>More About the House</h4>
