--- a/src/app/shared/component/property-frame/property-frame.component.html
+++ b/src/app/shared/component/property-frame/property-frame.component.html
@@ -1,11 +1,11 @@
 <div class="card">
   <div class="card-container">
 
-    <div class="card-image">
+    <div *ngIf="property" class="card-image">
       <img [src]="image" width="100%" height="100%">
     </div>
 
-    <div class="card-container-content">
+    <div *ngIf="property" class="card-container-content">
       <div class="charachteristics">{{property.NetAream2}} m2 | {{property.Typology}} bedrooms | {{property.NumberOfBathrooms}} bathrooms</div>
       <div class="address-price-row">
         <div class="address">{{property.City}}, {{property.Country}}</div>
