--- a/src/app/shared/property-details/property-details.component.html
+++ b/src/app/shared/property-details/property-details.component.html
@@ -20,11 +20,11 @@
         <div class="col-8">
             <div class="row container-image" *ngIf="items.length > 0">
                 <div class="col-6"  *ngFor="let item of items; let i = index">
-                    <div   *ngIf="i == 0"  [ngClass]="i == 0 ? 'card-image' : 'item'">
-                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="70%" />
+                    <div *ngIf="i == 0"  [ngClass]="i == 0 ? 'card-image' : 'item'">
+                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
                     </div>
-                    <div  *ngIf="i >= 1" [ngClass]="i == 0 ? 'card-image' : 'item'">
-                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="70%" />
+                    <div *ngIf="i >= 1" [ngClass]="i == 0 ? 'card-image' : 'item'">
+                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             <div class="row property-content">
                 <div class="col-12">
                     <div class="tab location">
-                        <app-map width="10px"   [mapPointInput]="mapPoint"></app-map>
+                        <app-map  [mapPointInput]="mapPoint"></app-map>
                     </div>
                     <div class="tab"> 
                         <h4>More About the House</h4>
